--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,4 +7,9 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.4"
+diesel = "2.1.4"
+diesel-async = { version = "0.4.1", features = ["mysql", "deadpool"] }
+serde = "1.0.196"
+thiserror = "1.0.56"
 tokio = { version = "1.35.1", features = ["full"] }
+tower = "0.4.13"
