--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.4"
+config = "0.14.0"
 diesel = "2.1.4"
 diesel-async = { version = "0.4.1", features = ["mysql", "deadpool"] }
 serde = "1.0.196"
