--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,3 +14,6 @@ serde = "1.0.196"
 thiserror = "1.0.56"
 tokio = { version = "1.35.1", features = ["full"] }
 tower = "0.4.13"
+tower-http = { version = "0.5.1", features = ["trace"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
