--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,10 +9,11 @@ edition = "2021"
 axum = "0.7.4"
 bcrypt = "0.15.0"
 config = "0.14.0"
-diesel = "2.1.4"
+diesel = { version = "2.1.4", features = ["serde_json"] }
 diesel-async = { version = "0.4.1", features = ["mysql", "deadpool"] }
 jsonwebtoken = "9.2.0"
 serde = "1.0.196"
+serde_json = "1.0.113"
 thiserror = "1.0.56"
 tokio = { version = "1.35.1", features = ["full"] }
 tower = "0.4.13"
