--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.7.4"
+axum = { version = "0.7.4", features = ["macros"] }
+axum-extra = { version = "0.9.2", features = ["typed-header"] }
 bcrypt = "0.15.0"
 config = "0.14.0"
 dashmap = "5.5.3"
