--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,6 +18,7 @@ nanoid = "0.4.0"
 rand = "0.8.5"
 serde = "1.0.196"
 serde_json = "1.0.113"
+skillratings = { version = "0.26.0", features = ["serde"] }
 thiserror = "1.0.56"
 tokio = { version = "1.35.1", features = ["full"] }
 tower = "0.4.13"
