--- a/klb-frontend/package.json
+++ b/klb-frontend/package.json
@@ -12,34 +12,36 @@
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
     "test:integration": "playwright test",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "start": "node build"
   },
   "devDependencies": {
     "@playwright/test": "^1.28.1",
+    "@skeletonlabs/skeleton": "2.8.0",
+    "@skeletonlabs/tw-plugin": "0.3.1",
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-node": "^5.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/eslint": "^8.56.0",
+    "@types/node": "20.11.20",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "autoprefixer": "10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "postcss": "8.4.35",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "3.4.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
-    "vitest": "^1.2.0",
-    "postcss": "8.4.35",
-    "autoprefixer": "10.4.17",
-    "tailwindcss": "3.4.1",
-    "@skeletonlabs/skeleton": "2.8.0",
-    "@skeletonlabs/tw-plugin": "0.3.1",
     "vite-plugin-tailwind-purgecss": "0.2.0",
-    "@types/node": "20.11.20"
+    "vitest": "^1.2.0"
   },
   "type": "module"
 }
