--- a/klb-frontend/package.json
+++ b/klb-frontend/package.json
@@ -16,6 +16,7 @@
     "start": "node build"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.3",
     "@playwright/test": "^1.28.1",
     "@skeletonlabs/skeleton": "2.8.0",
     "@skeletonlabs/tw-plugin": "0.3.1",
