--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,6 +15,7 @@ diesel = { version = "2.1.4", features = ["serde_json"] }
 diesel-async = { version = "0.4.1", features = ["mysql", "deadpool"] }
 jsonwebtoken = "9.2.0"
 nanoid = "0.4.0"
+openssl = { version = "0.10.64", features = ["vendored"] }
 rand = "0.8.5"
 serde = "1.0.196"
 serde_json = "1.0.113"
