--- a/klb-frontend/package.json
+++ b/klb-frontend/package.json
@@ -43,5 +43,8 @@
     "vite-plugin-tailwind-purgecss": "0.2.0",
     "vitest": "^1.2.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "svelte-persisted-store": "^0.9.1"
+  }
 }
